--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,16 @@
         <artifactId>spring-cloud-starter-feign</artifactId>
         <version>1.4.6.RELEASE</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.security.oauth</groupId>
+        <artifactId>spring-security-oauth2</artifactId>
+        <version>2.2.1.RELEASE</version>
+      </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.6</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
