--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,9 @@
   </parent>
 
   <properties>
+    <spring-cloud.version>Edgware.SR1</spring-cloud.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <start-class>eurekademo.EurekaApplication</start-class>
     <java.version>1.8</java.version>
-    <docker.image.prefix>springcloud</docker.image.prefix>
   </properties>
 
   <dependencyManagement>
@@ -38,7 +37,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Finchley.BUILD-SNAPSHOT</version>
+        <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -51,11 +50,6 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-feign</artifactId>
         <version>1.4.6.RELEASE</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.security.oauth</groupId>
-        <artifactId>spring-security-oauth2</artifactId>
-        <version>2.2.1.RELEASE</version>
       </dependency>
       <dependency>
         <groupId>org.projectlombok</groupId>
