--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <properties>
-    <spring-cloud.version>Edgware.SR1</spring-cloud.version>
+    <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
   </properties>
